# comfyui-easytoolkit

./: .gitignore  CLAUDE.md  CONFIG.md  README.md  __init__.py  config.override.json  config.yaml  install.bat  pyproject.toml  requirements.txt
nodes/: __init__.py  example.py
nodes/ai/: __init__.py  ai_prompt_assistant.py
nodes/algorithm/: __init__.py  bytes_comparer.py  bytes_merger.py  bytes_selector.py  file_extension_formatter.py  file_suffix_formatter.py  frame_calculator.py  image_file_ext_formatter.py  image_file_ext_to_format.py  zlib_compressor.py  zlib_decompressor.py
nodes/config/: __init__.py  ai_agents_config.py  ai_services_config.py  config_manager.py
nodes/constants/: __init__.py  resource_header_size.py
nodes/convert/: __init__.py  image_base64_converter.py
nodes/debug/: __init__.py  dialog_box.py  image_base64_previewer.py  image_batch_base64_previewer.py  toast_box.py
nodes/encoding/: __init__.py  base64_decoder.py  base64_encoder.py  base64_noise_decoder.py  base64_noise_encoder.py  base64_prefix_modifier.py  base64_url_formatter.py  base64_url_parser.py  (+15 more)
utils/: ai_service.py  compression.py  config.py  context.py  encoding.py  format.py  image.py  persistent_context.py  serialization.py  type.py  video.py
web/: ai_agents_config_manager.js  ai_prompt_assistant.js  ai_services_config_manager.js  api_utils.js  base64_cache_downloader.js  base64_cache_loader.js  base64_context_loader.js  base64_context_previewer.js  base64_downloader.js  base64_loader.js  base64_uploader.js  box_utils.js  easytoolkit_config_manager.js  image_batch_previewer.js  image_downloader.js  image_previewer.js  node_utils.js  preview_utils.js  ui_utils.js
(+77 files in other folders)
