[project]
name = "comfyui-easytoolkit"
description = "A simple ComfyUI toolkit, providing various practical nodes for image processing, algorithms, etc."
version = "0.0.1"
license = { text = "GNU General Public License v3.0" }

[project.urls]
Repository = "https://github.com/fuyouawa/comfyui-easytoolkit"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "fuyouawa"
DisplayName = "comfyui-easytoolkit"
Icon = ""