[project]
name = "comfyui-easytoolkit"
description = "A comprehensive ComfyUI extension toolkit providing nodes for algorithm calculations, Base64 encoding/decoding, image processing, and workflow utilities to streamline your ComfyUI workflows."
version = "0.0.1"
license = { text = "GNU General Public License v3.0" }

[project.urls]
Repository = "https://github.com/fuyouawa/comfyui-easytoolkit"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "fuyouawa"
DisplayName = "comfyui-easytoolkit"
Icon = ""